Aligned the locks and fixed modal text on player part

--- a/Arcane Arcade Integrated/ArcaneArcade/src/main/webapp/css/style.css
+++ b/Arcane Arcade Integrated/ArcaneArcade/src/main/webapp/css/style.css
@@ -27,3 +27,6 @@ label
 {
 	width: 280px;
 }
+i{
+    text-align: right;
+}
